Add support for uploading File to S3 bucket via a frontend app

--- a/backend/src/main/resources/application.yml.example
+++ b/backend/src/main/resources/application.yml.example
@@ -1,14 +1,18 @@
 server:
-  port: 8081
   error:
     include-message: always
 spring:
   application:
-    name: "Spring Boot Application for uploading files to AWS S3 buckets"
-  main:
-    web-application-type: servlet
+    name: "Spring Boot Application for uploading & downloading files to/from AWS S3 buckets"
+  servlet:
+    multipart:
+      file-size-threshold: 1MB
 
 application:
   aws:
-    access-key-id: ""
-    secret-access-key: ""
+    awsAccessKeyId: ""
+    awsSecretAccessKey: ""
+    awsSessionToken: ""
+    region: ""
+    s3:
+      s3BucketName: ""
