Restructure the project & minor changes

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,7 +8,6 @@ group = 'com.springboot'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
 }
 
 configurations {
@@ -25,8 +24,11 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.551')
-	implementation 'com.amazonaws:aws-java-sdk-s3'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation(platform('software.amazon.awssdk:bom:2.21.1'))
+	implementation 'software.amazon.awssdk:dynamodb-enhanced:2.21.41'
+	implementation 'software.amazon.awssdk:s3:2.23.12'
+	implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
