--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'software.amazon.awssdk:dynamodb-enhanced:2.21.41'
 	implementation 'software.amazon.awssdk:s3:2.23.12'
 	implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
+	implementation 'org.modelmapper:modelmapper:3.0.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
