Add controller advice, minor changes in domains

--- a/backend/src/main/resources/application.yml.example
+++ b/backend/src/main/resources/application.yml.example
@@ -1,6 +1,8 @@
 server:
   error:
     include-message: always
+  servlet:
+    context-path: "/aws-app/v1"
 spring:
   application:
     name: "Spring Boot Application using some AWS services"
